<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.registration.RegistrationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lblRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_32sdp"
            android:letterSpacing="0.1"
            android:text="@string/registration"
            android:textAllCaps="true"
            android:textColor="@color/grey"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_32sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:nextFocusDown="@id/etLastName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblRegistration">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:textColor="@color/grey_dark" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:nextFocusDown="@id/etAge"
            app:layout_constraintEnd_toEndOf="@id/tilFirstName"
            app:layout_constraintStart_toStartOf="@+id/tilFirstName"
            app:layout_constraintTop_toBottomOf="@+id/tilFirstName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:textColor="@color/grey_dark" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:nextFocusDown="@id/etEmail"
            app:layout_constraintEnd_toEndOf="@id/tilLastName"
            app:layout_constraintStart_toStartOf="@+id/tilFirstName"
            app:layout_constraintTop_toBottomOf="@+id/tilLastName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAge"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/age"
                android:inputType="number"
                android:textColor="@color/grey_dark" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:nextFocusDown="@id/etPassword"
            app:layout_constraintEnd_toEndOf="@id/tilLastName"
            app:layout_constraintStart_toStartOf="@+id/tilFirstName"
            app:layout_constraintTop_toBottomOf="@+id/tilAge">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/grey_dark" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="@id/tilLastName"
            app:layout_constraintStart_toStartOf="@+id/tilFirstName"
            app:layout_constraintTop_toBottomOf="@+id/tilEmail"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/grey_dark" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_32sdp"
            android:paddingStart="@dimen/_32sdp"
            android:paddingEnd="@dimen/_32sdp"
            android:text="@string/register"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/tilLastName"
            app:layout_constraintStart_toStartOf="@+id/tilFirstName"
            app:layout_constraintTop_toBottomOf="@+id/tilPassword" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lblHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/already_have_an_account"
            app:layout_constraintEnd_toEndOf="@+id/tilLastName"
            app:layout_constraintStart_toStartOf="@+id/tilFirstName"
            app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp"
            android:padding="@dimen/_6sdp"
            android:text="@string/login"
            android:textColor="@color/grey"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/lblHaveAccount"
            app:layout_constraintStart_toStartOf="@+id/lblHaveAccount"
            app:layout_constraintTop_toBottomOf="@+id/lblHaveAccount" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>